# arduino-android-ci

./: .gitignore  .travis.yml  README.md  travis.yml
android/: gradle.properties.no.git
android/app/: build.gradle
android/app/src/androidTest/java/platis/solutions/ci/example/: ExampleInstrumentedTest.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/platis/solutions/ci/example/: MainActivity.java
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: strings.xml
android/app/src/test/java/platis/solutions/ci/example/: ExampleUnitTest.java
android/gradle/wrapper/: gradle-wrapper.properties
arduino/automatedMovements/: ArduinoExternalEnvironment.h  AutomatedMover.cpp  AutomatedMover.h  ExternalEnvironment.h  RotateableVehicle.h  SmartCarRotateableVehicle.h  automatedMovements.ino
arduino/test/: CMakeLists.txt
arduino/test/mocks/: MockExternalEnvironment.h  MockRotateableVehicle.h
arduino/test/ut/: automatedMovements_test.cpp
